--- a/package.json
+++ b/package.json
@@ -39,17 +39,20 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-multi-entry": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
+    "@wordpress/babel-preset-default": "^6.3.2",
     "autoprefixer": "^10.3.2",
     "bootstrap": "^4.6.0",
     "browser-sync": "^2.27.5",
     "browserslist": "^4.16.8",
     "caniuse-lite": "^1.0.30001248",
     "clean-css-cli": "^5.3.3",
+    "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "font-awesome": "^4.7.0",
     "nodemon": "^2.0.12",
