--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "understrap-child",
-  "version": "0.6.0",
+  "version": "1.0.1",
   "description": "Basic Child Theme for Understrap Theme Framework: https://github.com/understrap/understrap",
   "main": "index.js",
   "scripts": {
     "bs": "browser-sync start --config src/build/browser-sync.config.js",
     "css": "npm-run-all css-compile css-postcss css-minify",
-    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css src/sass/child-theme.scss:css/child-theme.css src/sass/custom-editor-style.scss:css/custom-editor-style.css",
+    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --quiet src/sass/child-theme.scss:css/child-theme.css src/sass/custom-editor-style.scss:css/custom-editor-style.css",
     "css-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output css/ --batch --batch-suffix \".min\" \"css/*.css\" \"!css/*.min.css\" \"!css/*rtl*.css\"",
     "css-postcss": "postcss --config src/build/postcss.config.js --replace \"css/*.css\" \"!css/*.rtl*.css\" \"!css/*.min.css\"",
     "js": "npm-run-all js-compile js-minify",
     "js-compile": "rollup --config src/build/rollup.config.js --sourcemap",
-    "js-minify": "terser --compress typeofs=false --mangle --comments \"/^!/\" --source-map \"content=js/child-theme.js.map,includeSources,url=child-theme.min.js.map\" --output js/child-theme.min.js js/child-theme.js",
+    "js-minify": "terser --config-file src/build/terser.config.json --output js/child-theme.min.js js/child-theme.js",
     "watch": "npm-run-all --parallel watch-run-*",
     "watch-bs": "npm-run-all --parallel bs watch-run-*",
     "watch-run-css": "nodemon --watch sass/ --ext scss --exec \"npm-run-all css\"",
@@ -39,17 +39,20 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-multi-entry": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
+    "@wordpress/babel-preset-default": "^6.3.2",
     "autoprefixer": "^10.3.2",
     "bootstrap": "^4.6.0",
     "browser-sync": "^2.27.5",
     "browserslist": "^4.16.8",
     "caniuse-lite": "^1.0.30001248",
     "clean-css-cli": "^5.3.3",
+    "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "font-awesome": "^4.7.0",
     "nodemon": "^2.0.12",
